# Kobo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Documentation.md  README.md  docker-compose.yml  kobo.config.yaml  pyproject.toml  railway.toml  requirements.txt  start.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  E2E_TESTING.md  EXTERNAL_TOOL_SAFETY_CHECKLIST.md  integration-adapters.md  posthog-transitive-dependency-followup.md
docs/assets/: CHAT_COOKBOOK.md  DEPLOYMENT.md  file-analysis-boundary.md  sqlite-runtime-policy.md
scripts/: replay_qwen_prompt_cache.py  run_live_e2e_sections.py
src/kobo/: __main__.py
src/kobo/agent/: __init__.py  composio_context.py  context_compaction.py  (+43 more)
tests/: test_api_app_runtime_services.py  test_api_route_use_cases.py  test_browser_use_compaction.py  test_browser_use_local_manager.py  test_browser_use_tools.py  test_business_knowledge_routes.py  test_business_knowledge_service.py  test_capsolver_integration.py  test_composio_optional_startup.py  test_composio_routes.py  test_composio_service.py  test_composio_tools.py  test_config_api_key_alias.py  test_context_compaction_window.py  test_context_engine.py  test_core_debug_logs.py  test_core_tools.py  test_debug_logs_route.py  test_e2e_harness_owner_messages.py  test_e2e_real_composio.py  test_fetch_link_content_crawl4ai.py  test_file_knowledge_prep.py  test_file_send_routes.py  test_generic_chat_routes.py  test_headroom_integration.py  test_ids.py  test_intake_messaging_adapters.py  test_intake_tools.py  test_intake_workflow_routes.py  test_intake_workflow_service.py  test_intake_workflow_skill.py  test_interactive_owner_update_runtime.py  test_internal_api_auth.py  test_internal_tool_http.py  test_langfuse_logging.py  test_link_alias_service.py  test_llm_call_tracing.py  test_main_bootstrap.py  test_memory_routes.py  test_memory_service.py  (+75 more)
tests/e2e/: __init__.py  conftest.py  test_lead_simulator.py  test_owner_simulator.py
(+174 files in other folders)
